Thông báo xoá thiết bị trả về dạng JSON

--- a/ITSS/src/main/resources/application.properties
+++ b/ITSS/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=KTPM
-spring.datasource.url=jdbc:postgresql://localhost:5432/ktpmdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/itssdb
 spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
