--- a/ITSS/src/main/resources/application.properties
+++ b/ITSS/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.application.name=KTPM
-spring.datasource.url=jdbc:postgresql://localhost:5432/ktpmdb
+spring.application.name=ITSS
+spring.datasource.url=jdbc:postgresql://localhost:5432/itssdb
 spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+jwt.secret=my_very_secret_key_123456
+jwt.expiration=3600000
+logging.level.org.springframework.security=DEBUG
